backend/kubernetes/nginx/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: sitebuilder
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: shanedonnelly34/nginx:latest
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /devops/shanify
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /devops/shanify
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
